2006-08-14  Max Smolens  <smolens@gmail.com>

	* Released version 1.0.6:
	  Fix problem with links that have a favicon when opening all
	  links in a folder.

2006-05-30  Max Smolens  <smolens@gmail.com>

	* Released version 1.0.5:
	  Add collapsing of bookmark folders.

	  Fix problem loading when My Portal is the home page. (Closes:
	  #14188)

2006-01-29  Max Smolens  <smolens@gmail.com>

	* Released version 1.0.4:
	  Enable display of favicons in front of links.  (Closes: #12940)

2005-11-06  Max Smolens  <smolens@gmail.com>

	* Released version 1.0.3:
	  Ensure browser loads bookmarks on startup to avoid erroneous
	  "Not Found" error when My Portal is the home page.  (Closes:
	  #11815)

2005-11-01  Max Smolens  <smolens@gmail.com>

	* Released version 1.0.2:
	  Firefox 1.5.0 support.

2005-10-08  Max Smolens  <smolens@gmail.com>

	* Released version 1.0.1:
	  Firefox 1.5b2 support.

2005-09-11  Max Smolens  <smolens@gmail.com>

	* Released version 1.0.